# AutoFileSort

./: .gitignore  Makefile  README.md  auto_gui.py  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
autofile/: __init__.py  config.py  notifications.py  sorter.py  tray.py
config/: file_types.json
scripts/: create_autosort_shortcut.ps1
tests/: test_config.py  test_placeholder.py  test_sorter.py
