[project]
name = "desktop-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altgraph==0.17.4",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "fonttools==4.56.0",
    "kiwisolver==1.4.8",
    "packaging==24.2",
    "pefile==2023.2.7",
    "pillow==11.1.0",
    "psutil==7.0.0",
    "pyparsing==3.2.1",
    "pystray==0.19.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pywin32-ctypes==0.2.3",
    "plyer==2.1.0",
    "setuptools>=78.1.1",
    "six==1.17.0",
    "win11toast==0.35; sys_platform == 'win32'",
    "tzdata==2025.1",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "coverage>=7.10.5",
    "mypy>=1.17.1",
    "pip-audit>=2.9.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
