[project]
name = "AutoSort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow==11.1.0",
    "pystray==0.19.5",
    "watchdog==6.0.0",
    "win11toast>=0.35; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "coverage>=7.10.5",
    "mypy>=1.17.1",
    "pip-audit>=2.9.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
# Start strict-ish but practical
strict_optional = true

[[tool.mypy.overrides]]
module = [
  "pystray",
  "pystray.*",
  "win11toast",
  "watchdog.*",
]
ignore_missing_imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"
